Fix font issue on Safari

--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
+@font-face {
+    font-family: 'FiraCode Font';
+    src: url('fonts/FiraCode-Regular.ttf') format('truetype');
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'FiraCode Font';
+    src: url('fonts/FiraCode-Bold.ttf') format('truetype');
+    font-weight: bold;
+}
+
 body {
     background-color: #101010;
 }
 
 h2 {
     color: #AACCAA;
-    font-family: "FiraCode Nerd Font Mono", serif;
+    font-family: "FiraCode Font", serif;
     font-size: 32px;
     text-align: center;
     user-select: none;
@@ -12,7 +24,7 @@ h2 {
 
 h3 {
     color: #FFAA88;
-    font-family: "FiraCode Nerd Font Mono", serif;
+    font-family: "FiraCode Font", serif;
     font-size: 24px;
     text-align: center;
     user-select: none;
@@ -20,7 +32,7 @@ h3 {
 
 h4 {
     color: #EEDDAA;
-    font-family: "FiraCode Nerd Font Mono", serif;
+    font-family: "FiraCode Font", serif;
     font-size: 20px;
     text-align: center;
     user-select: none;
@@ -44,14 +56,14 @@ img:hover {
 
 p {
     color: #FFFFEE;
-    font-family: "FiraCode Nerd Font Mono", serif;
+    font-family: "FiraCode Font", serif;
     font-size: 16px;
     text-align: center;
 }
 
 a {
     color: #EEFFEE;
-    font-family: "FiraCode Nerd Font Mono", serif;
+    font-family: "FiraCode Font", serif;
     font-size: 16px;
     text-decoration: underline;
     text-decoration-color: #22AAFF;
